--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   numberpicker: ^2.1.1
+  loader_overlay: ^2.0.7
+  loading: ^1.0.2
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
