--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   loader_overlay: ^2.0.7
   loading: ^1.0.2
   loading_overlay: ^0.3.0
+  image_downloader: ^0.31.0
 
 dev_dependencies:
   flutter_test:
