--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   loading: ^1.0.2
   loading_overlay: ^0.3.0
   image_downloader: ^0.31.0
+  fluttertoast: ^8.0.9
+  motion_toast: ^2.2.2
 
 dev_dependencies:
   flutter_test:
