--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.0.9
   motion_toast: ^2.2.2
   flutter_svg: ^1.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
