--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   motion_toast: ^2.2.2
   flutter_svg: ^1.1.0
   shared_preferences: ^2.0.15
+  share_plus: ^4.0.10
 
 dev_dependencies:
   flutter_test:
