--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^1.1.0
   shared_preferences: ^2.0.15
   share_plus: ^4.0.10
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
