--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.15
   share_plus: ^4.0.10
   url_launcher: ^6.1.5
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
